# pattern-final-project

./: .gitignore  .gitmodules  conftest.py  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/01-gcn-embedding-and-classical-classifiers-rf-xgboost-using-notebook-reference/: 01-01-PLAN.md  01-02-PLAN.md  01-03-PLAN.md  01-CONTEXT.md  01-VALIDATION.md
.planning/phases/01-infrastructure-modularization/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-05-PLAN.md  01-05-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-RESEARCH.md  01-REVIEW.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-model-implementation/: 02-01-PLAN.md  02-02-PLAN.md  02-02-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-REVIEWS.md  02-VALIDATION.md
.planning/phases/03-training-distillation/: 03-03-SUMMARY.md
.planning/phases/04-evaluation-benchmarking/: 04-01-SUMMARY.md
.planning/phases/07-oversampling-gcn-skip/: 07-00-PLAN.md  07-00-SUMMARY.md  07-01-PLAN.md  07-02-PLAN.md  (+6 more)
reference/EvolveGCN/: Dockerfile  README.md  results_evolve.txt  results_gcn_skip.txt  results_skip.txt  utils.py
reference/EvolveGCNFai/: Dockerfile  results_skip.txt  results_skip_filtered.txt  train_evolve_gcn.py  train_gcn.py  train_gcn_skip.py  utils.py
tests/: test_sampler.py
(+2 files in other folders)
